Update for Ruby 1.9

--- a/README.rdoc
+++ b/README.rdoc
@@ -3,3 +3,5 @@
 This project rocks and uses MIT-LICENSE.
 This gem will add to_vnlink method for String class.
 to_vnlink method will transform "Cộng đồng Ruby" to "cong-dong-ruby" ... 
+
+Updated for Ruby 1.9
